--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ button {
 }
 
 .layout_padding {
-    padding-top: 90px;
+    padding-top: 35px;
     padding-bottom: 0px;
 }
 
@@ -226,7 +226,6 @@ button {
 }
 
 .logo {
-   
     width: 85px;
     float: left;
 }
@@ -240,16 +239,23 @@ button {
     padding-left: 20px;
     color: #272a2a;
     font-size: 18px;
+   
 }
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
     color: #15e4d0;
+    
 }
 
 .navbar {
-    padding: .5rem 70px;
+    padding: .5rem 30px;
 }
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     color: #15e4d0;
+    
+   
+}
+.nav-all{
+    margin-left: 500px;
 }
 
 .banner_section {
@@ -978,3 +984,7 @@ input.Enter_text::placeholder {
 .margin_90 {
     margin: 90px 0px;
 }
+
+
+/* EXTRA CODES */
+
